flesh out the functions, start to add unit tests

--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,14 @@ skipsdist = True
 deps =
     -rfunctions/initial_md5_hash/requirements.txt
     -rfunctions/intermediate_md5_hash/requirements.txt
-    -rfunctions/put_object_mapping/requirements.txt
+    -rfunctions/put_object_tagging/requirements.txt
 
 [testenv]
 commands = python -m pytest --noconftest {posargs}
 deps =
     {[base]deps}
     pytest==6.2.4
-    pytest-mock
+    pytest-mock==3.6.1
 
 [testenv:lint]
 basepython = python3.8
@@ -24,7 +24,7 @@ commands = pre-commit run --all-files
 
 [testenv:coverage-report]
 basepython = python3.8
-commands = pytest --noconftest --cov-report term-missing --cov=lambda-s3-md5-hash
+commands = pytest --noconftest --cov-report term-missing --cov=s3-md5-hash
 deps =
     {[base]deps}
     pytest-cov==2.11.1
