add caching for tox envs

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,16 @@ deps =
     -rfunctions/intermediate_md5_hash/requirements.txt
     -rfunctions/put_object_tagging/requirements.txt
 
+[test]
+deps =
+    pytest==6.2.4
+    pytest-mock==3.6.1
+
 [testenv]
 commands = python -m pytest --noconftest {posargs}
 deps =
     {[base]deps}
-    pytest==6.2.4
-    pytest-mock==3.6.1
+    {[test]deps}
 
 [testenv:lint]
 basepython = python3.8
@@ -27,6 +31,7 @@ basepython = python3.8
 commands = pytest --noconftest --cov-report term-missing --cov=s3-md5-hash
 deps =
     {[base]deps}
+    {[test]deps}
     pytest-cov==2.11.1
 
 [flake8]
