fix coverage report to only use unit tests and check correct module

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands = pre-commit run --all-files
 
 [testenv:coverage-report]
 basepython = python3.8
-commands = pytest --noconftest --cov-report term-missing --cov=s3-md5-hash
+commands = pytest -k unit --noconftest --cov-report term-missing --cov=functions
 deps =
     {[base]deps}
     {[test]deps}
