add policies to give lambdas permissions on objects

--- a/template.yaml
+++ b/template.yaml
@@ -44,6 +44,15 @@ Resources:
       CodeUri: functions/initial_md5_hash/
       Handler: app.lambda_handler
       Runtime: python3.8
+    Policies:
+      Statement:
+        - Effect: Allow
+          Action:
+            - s3:GetObject
+            - s3:GetObjectTagging
+          Resource:
+            - !Sub arn:aws:s3:::${eventSourceBucket}
+            - !Sub arn:aws:s3:::${eventSourceBucket}/*
 
   IntermediateMD5Hash:
     Type: AWS::Serverless::Function
@@ -51,6 +60,15 @@ Resources:
       CodeUri: functions/intermediate_md5_hash/
       Handler: app.lambda_handler
       Runtime: python3.8
+    Policies:
+      Statement:
+        - Effect: Allow
+          Action:
+            - s3:GetObject
+            - s3:GetObjectTagging
+          Resource:
+            - !Sub arn:aws:s3:::${eventSourceBucket}
+            - !Sub arn:aws:s3:::${eventSourceBucket}/*
 
   PutObjectTagging:
     Type: AWS::Serverless::Function
@@ -58,6 +76,15 @@ Resources:
       CodeUri: functions/put_object_tagging/
       Handler: app.lambda_handler
       Runtime: python3.8
+    Policies:
+      Statement:
+        - Effect: Allow
+          Action:
+            - s3:GetObjectTagging
+            - s3:PutObjectTagging
+          Resource:
+            - !Sub arn:aws:s3:::${eventSourceBucket}
+            - !Sub arn:aws:s3:::${eventSourceBucket}/*
 
   # Need separate bucket for CloudTrail logs. Reusing trailed bucket is not recommended
   # Cloudformation cannot delete non-empty bucket, set policies to Retain, wil require manual deletion
