fix iam policy formatting and update docs

--- a/template.yaml
+++ b/template.yaml
@@ -45,12 +45,10 @@ Resources:
       Handler: app.lambda_handler
       Runtime: python3.8
     Policies:
-      Statement:
-        - Effect: Allow
-          Action:
-            - s3:GetObject
-          Resource:
-            - !Sub arn:aws:s3:::${eventSourceBucket}/*
+      - Statement:
+          - Effect: Allow
+            Action: s3:GetObject
+            Resource: !Sub arn:aws:s3:::${eventSourceBucket}/*
 
   IntermediateMD5Hash:
     Type: AWS::Serverless::Function
@@ -59,12 +57,11 @@ Resources:
       Handler: app.lambda_handler
       Runtime: python3.8
     Policies:
-      Statement:
-        - Effect: Allow
-          Action:
-            - s3:GetObject
-          Resource:
-            - !Sub arn:aws:s3:::${eventSourceBucket}/*
+      - Statement:
+          - Effect: Allow
+            Action: s3:GetObject
+            Resource: !Sub arn:aws:s3:::${eventSourceBucket}/*
+
 
   PutObjectTagging:
     Type: AWS::Serverless::Function
@@ -73,13 +70,12 @@ Resources:
       Handler: app.lambda_handler
       Runtime: python3.8
     Policies:
-      Statement:
-        - Effect: Allow
-          Action:
-            - s3:GetObjectTagging
-            - s3:PutObjectTagging
-          Resource:
-            - !Sub arn:aws:s3:::${eventSourceBucket}/*
+      - Statement:
+          - Effect: Allow
+            Action:
+              - s3:GetObjectTagging
+              - s3:PutObjectTagging
+            Resource: !Sub arn:aws:s3:::${eventSourceBucket}/*
 
   # Need separate bucket for CloudTrail logs. Reusing trailed bucket is not recommended
   # Cloudformation cannot delete non-empty bucket, set policies to Retain, wil require manual deletion
