--- a/tox.ini
+++ b/tox.ini
@@ -50,3 +50,6 @@ exclude_lines =
 
     # Don't complain if non-runnable code isn't run:
     if __name__ == .__main__.:
+
+    # No need to check these conditionals since they don't contain runtime code
+    if TYPE_CHECKING:
